2000-04-27  Tim Jenness  <t.jenness@jach.hawaii.edu>

	* t/posix.t: Add explicit autoflush on filehandle

	* t/mktemp.t: Add explicit autoflush on filehandle

	* Temp.pm: (unlink0): Disallow HIGH and MEDIUM tests if running
	perl 5.005 or earlier.

	* t/security.t: Specify perl version to allow for tests

        * Add support for perl 5.005 (remove 'our' and auto-vivifying file 
	handles). VERSION NUMBER NOW 0.07

	* README: Update in preparation for V0.06 

	* Temp.pm (_deferred_unlink): Add new internal routine to centralise the
	configuring of END blocks. This also fixes a bug where only the
	first file was being unlinked in the END block (due to scoping).

	(_can_unlink_opened_file): Rename from _can_unlink. Will now
	return false if running on Windows.

	(_is_verysafe): If _PC_CHOWN_RESTRICTED is not available assume
	that "chown giveaway" is possible anyway.

	(unlink0): If can not unlink an open file, simply defer removal
	until later.

	(_gettemp): Add O_NOINHERIT and O_TEMPORARY flags to sysopen if
	they are available (Thanks to Tom Christiansen for this)

	* t/mktemp.t: Add test

	* t/posix.t: Add test

	* t/security.t: Add test

	* t/tempfile.t: Add test

2000-03-14  Tim Jenness  <t.jenness@jach.hawaii.edu>

	* Release v0.05 to CPAN